modified main.html and main.css and added images

--- a/main.html
+++ b/main.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dolfin Personal Finance Tracker</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+IT+Moderna:wght@100..400&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <nav class="navbar">
         <div class="logo">
-            <a href="#">MyLogo</a>
+            <a href="#"><img src="img/logo.png" alt="">Dolfin</a>
         </div>
         <ul class="nav-links">
-            <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">Track</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Login</a></li>
         </ul>
         <div class="hamburger">
             <span></span>
@@ -23,6 +30,42 @@
             <span></span>
         </div>
     </nav>
+    <div class="background-image">
+        Make your Finance tracking easier
+    </div>
+    <div class="feature-section">
+        <div class="feature-text">
+            <p>Add multiple bank accounts with ease.</p>
+        </div>
+        <div class="feature-image">
+            <img src="img/img2.png" alt="Feature Image">
+        </div>
+    </div>
+    <div class="feature-section">
+        <div class="feature-image">
+            <img src="img/img 3.png" alt="Feature Image">
+        </div>
+        <div class="feature-text">
+            <p>Track your Savings and Expenditure</p>
+        </div>
+    </div>
+    <div class="feature-section">
+        <div class="feature-text">
+            <p>One app for all your financial needs</p>
+        </div>
+        <div class="feature-image">
+            <img src="img/img5.png" alt="Feature Image" id="img5">
+        </div>
+    </div>
+    <div class="feature-section">
+        <div class="feature-image">
+            <img src="img/img6.png" alt="Feature Image" id="img6">
+        </div>
+        <div class="feature-text">
+            <p>Manage your goals and investments</p>
+        </div>
+    </div>
     <script src="main.js"></script>
 </body>
+
 </html>
