--- a/main.html
+++ b/main.html
@@ -7,9 +7,8 @@
     <title>Dolfin Personal Finance Tracker</title>
     <link rel="stylesheet" href="main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playwrite+IT+Moderna:wght@100..400&display=swap"
-        rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Rubik+Mono+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -22,7 +21,7 @@
             <li><a href="#">Features</a></li>
             <li><a href="#">Track</a></li>
             <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Login</a></li>
+            <li><a href="login.html">Login</a></li>
         </ul>
         <div class="hamburger">
             <span></span>
